--- a/.gitignore
+++ b/.gitignore
@@ -2,39 +2,39 @@
 
 
 # compiled output
-backend/dist
-backend/node_modules
+react-nest-feedback-app/backend/dist
+react-nest-feedback-app/backend/node_modules
 
 # Logs
-backend/logs
-backend/*.log
-backend/npm-debug.log*
-backendyarn-debug.log*
-backend/yarn-error.log*
-backend/lerna-debug.log*
+react-nest-feedback-app/backend/logs
+react-nest-feedback-app/backend/*.log
+react-nest-feedback-app/backend/npm-debug.log*
+react-nest-feedback-app/backend/yarn-debug.log*
+react-nest-feedback-app/backend/yarn-error.log*
+react-nest-feedback-app/backend/lerna-debug.log*
 
 # OS
-backend/.DS_Store
+react-nest-feedback-app/backend/.DS_Store
 
 # Tests
-backend/coverage
-backend/.nyc_output
+react-nest-feedback-app/backend/coverage
+react-nest-feedback-app/backend/.nyc_output
 
 # IDEs and editors
-backend/.idea
-backend/.project
-backend/.classpath
-backend/.c9/
-backend/*.launch
-backend/.settings/
-backend/*.sublime-workspace
+react-nest-feedback-app/backend/.idea
+react-nest-feedback-app/backend/.project
+react-nest-feedback-app/backend/.classpath
+react-nest-feedback-app/backend/.c9/
+react-nest-feedback-app/backend/*.launch
+react-nest-feedback-app/backend/.settings/
+react-nest-feedback-app/backend/*.sublime-workspace
 
 # IDE - VSCode
-backend/.vscode/*
-backend/!.vscode/settings.json
-backend/!.vscode/tasks.json
-backend/!.vscode/launch.json
-backend/!.vscode/extensions.json
+react-nest-feedback-app/backend/.vscode/*
+react-nest-feedback-app/backend/!.vscode/settings.json
+react-nest-feedback-app/backend/!.vscode/tasks.json
+react-nest-feedback-app/backend/!.vscode/launch.json
+react-nest-feedback-app/backend/!.vscode/extensions.json
 
 
 #FRONTEND IGNORE FILES
@@ -42,23 +42,23 @@ backend/!.vscode/extensions.json
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-frontend/node_modules
-frontend/.pnp
-frontend/.pnp.js
+react-nest-feedback-app/frontend/node_modules
+react-nest-feedback-app/frontend/.pnp
+react-nest-feedback-app/frontend/.pnp.js
 
 # testing
-frontend/coverage
+react-nest-feedback-app/frontend/coverage
 
 # production
-frontend/build
+react-nest-feedback-app/frontend/build
 
 # misc
-frontend/.DS_Store
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
+react-nest-feedback-app/frontend/.DS_Store
+react-nest-feedback-app/frontend/.env.local
+react-nest-feedback-app/frontend/.env.development.local
+react-nest-feedback-app/frontend/.env.test.local
+react-nest-feedback-app/frontend/.env.production.local
 
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
+react-nest-feedback-app/frontend/npm-debug.log*
+react-nest-feedback-app/frontend/yarn-debug.log*
+react-nest-feedback-app/frontend/yarn-error.log*
